# sleaf-llvm

./: .clang-tidy  .clangd  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  HACKING.md  README.md  build.sh  format-code.py  getversion.py  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  lint.cmake  variables.cmake
docs/ru/: article.md  introduction.md
docs/ru/LanguageCreating/: 1.0 Introduction.md  1.1 Что такое LLVM.md  1.1.1 JIT Compiler.md  1.2 IR.md  1.3 Устройство компилятора.md  1.3.1 Lexer.md  1.3.2 Parser.md  1.3.2.1 BNF.md  1.3.3 AST.md
examples/: functions.sleaf  helloworld.sleaf  simple.sleaf
scripts/: build-legacy.sh  create_headers.py
source/: _default.hpp  input_parser.cpp  input_parser.hpp  lib.cpp  logger.cpp  logger.hpp  main.cpp  tracelogger.cpp  tracelogger.hpp
source/ast/: ast.cpp  ast.hpp
source/codegen/: codegen.cpp  codegen.hpp
source/lexer/: lexer.cpp  lexer.hpp
source/parser/: parser.cpp  parser.hpp
test/: CMakeLists.txt
test/source/: sleaf-llvm_test.cpp
